# CMakeLists

./: .gitignore
code/example_1/: main.c
code/example_2/: CMakeLists.txt  hello.h  main.c
code/example_3/: CMakeLists.txt
code/example_4/: CMakeLists.txt
code/example_4/libhello/: CMakeLists.txt
code/example_4/src/: CMakeLists.txt
code/example_5_1/: CMakeLists.txt
code/example_5_1/libhello/: hello.c
code/example_5_1/src/: CMakeLists.txt
code/example_5_2/libhello/: CMakeLists.txt
code/example_5_2/src/: CMakeLists.txt
code/example_6/libhello/: CMakeLists.txt
code/example_6/src/: main.c
code/example_7/libhello/: CMakeLists.txt
code/example_7/libhello/source/: CMakeLists.txt
code/example_7/src/: CMakeLists.txt
code/example_8_source_group/: CMakeLists.txt
code/example_8_source_group/app/: CMakeLists.txt  appsource
code/example_8_source_group/libhello/: CMakeLists.txt  libsource
code/example_8_source_group/libhello/source/: hello.c
code/multiFileSingleCMakeLists/: CMakeLists.txt
code/multiFileSingleCMakeLists/infra/include/: interface.h
code/multiFileSingleCMakeLists/infra/source/: list.c
code/multiFileSingleCMakeLists/libhello/include/: hello.h
code/multiFileSingleCMakeLists/source/: main.c
doc/: CMakeLists Guide.doc
