cmake_minimum_required(VERSION 3.5)
project(HELLO)
set(LIB_SRC hello.c)
set(APP_SRC main.c)
set(CMAKE_VERBOSE_MAKEFILE on)
message("message:"${CMAKE_VERBOSE_MAKEFILE})
add_library(libhello ${LIB_SRC})
set_target_properties(libhello PROPERTIES OUTPUT_NAME "hello")
add_executable(hello ${APP_SRC})
target_link_libraries(hello libhello)
